# xraw3D

./: .gitignore  CMakeLists.txt  README.md
source/: xraw3d.cpp  xraw3d.h  xraw3d_anim.h  xraw3d_assimp_import.h  xraw3d_geom.h
source/details/: xraw3d_anim.cpp  xraw3d_assimp_import.cpp  xraw3d_assimp_import_v2.cpp  xraw3d_assimp_import_v2.h  xraw3d_assimp_import_v3.h  xraw3d_geom.cpp
source/unit_test/: main.cpp
src/: xraw3d.cpp  xraw3d.h  xraw3d_anim.h  xraw3d_geom.h
src/details/: xraw3d_anim.cpp  xraw3d_assimp_import.cpp  xraw3d_geom.cpp
